--- a/app/views/user/_header.html.erb
+++ b/app/views/user/_header.html.erb
@@ -9,8 +9,9 @@
         <li class="nav-item">
         <%= link_to 'About Us' , user_about_path,class: "navbar-brand"%>
         <% if user_signed_in?%>
-         <%= link_to 'Friend' ,  class: "navbar-brand"%>
-          <%= link_to 'Add Friend ',  class: "navbar-brand"%>
+         <%= link_to 'Plans' ,user_add_plan_path,  class: "navbar-brand"%>
+          <%= link_to 'Features ', user_add_feature_path, class: "navbar-brand"%>
+          <%= link_to 'Add Buyer ' ,  user_add_buyer_path, class: "navbar-brand"%>
           <%= link_to 'Sign Out ' ,  destroy_user_session_path, method: :delete, class: "navbar-brand"%>
           <%= link_to 'Edit Profile ' , edit_user_registration_path, class: "navbar-brand"%>
         <% else %>
@@ -19,10 +20,7 @@
         <%end%>
         </li>
       </ul>
-      <form class="d-flex">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
+
     </div>
   </div>
 </nav>
