--- a/app/views/user/add_plan.html.erb
+++ b/app/views/user/add_plan.html.erb
@@ -1,1 +1,4 @@
-<h1> this is the plan page </h1>
+<h1> PLANS </h1>
+<br/>
+<%= link_to 'ADD PLAN', new_plan_path  , class: "btn btn-dark"  %>
+<%= link_to 'ALL PLANS', plans_path  , class: "btn btn-dark"  %>
