--- a/app/views/features/_feature_form.html.erb
+++ b/app/views/features/_feature_form.html.erb
@@ -1,6 +1,6 @@
 <br/>
-<%= form_with(model: @feature) do |form| %>
-<div class="field mb-3">
+<%= form_with(model: [@plan, @features], local: true) do |form| %>
+  <div class="field mb-3">
     <%= form.label :name %>
     <%= form.text_field :name, class:"form-control"%>
   </div>
@@ -19,11 +19,6 @@
     <%= form.label :max_unit_limit %>
     <%= form.text_field :max_unit_limit , class:"form-control"%>
   </div>
-
-
- <!-- <div class="field mb-3">
-  <%= form.number_field :user_id, class:"form-control" ,value: current_user.id, type: :hidden%>
-  </div> -->
 
 <br/>
 <div class="actions">
