adding admin-buyer functionality

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
   <body>
-    <%= render 'user/header'%>
+    <%= render 'users/header'%>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
     <div class='container'>
