--- a/app/views/features/_feature_form.html.erb
+++ b/app/views/features/_feature_form.html.erb
@@ -1,23 +1,23 @@
 <br/>
-<%= form_with(model: [@plan, @features], local: true) do |form| %>
+<%= form_with(model: [@user, @plan, @features], remote: true) do |form| %>
   <div class="field mb-3">
     <%= form.label :name %>
-    <%= form.text_field :name, class:"form-control"%>
+    <%= form.text_field :name, class:"form-control", required: true%>
   </div>
 
   <div class="field mb-3">
     <%= form.label :code %>
-    <%= form.text_field :code, class:"form-control" %>
+    <%= form.text_field :code, class:"form-control", required: true %>
   </div>
 
   <div class="field mb-3">
     <%= form.label :unit_price %>
-    <%= form.text_field :unit_price , class:"form-control"%>
+    <%= form.text_field :unit_price , class:"form-control", required: true%>
   </div>
 
   <div class="field mb-3">
     <%= form.label :max_unit_limit %>
-    <%= form.text_field :max_unit_limit , class:"form-control"%>
+    <%= form.text_field :max_unit_limit , class:"form-control", required: true%>
   </div>
 
 <br/>
