--- a/app/views/features/index.html.erb
+++ b/app/views/features/index.html.erb
@@ -16,8 +16,9 @@
           <td><%= feature.code %></td>
           <td><%= feature.unit_price %></td>
           <td><%= feature.max_unit_limit %></td>
-          <td><%= link_to 'Edit', edit_plan_feature_path(@plan, feature), class: "btn btn-dark" %></td>
-          <td><%= link_to 'Destroy',plan_feature_path(@plan, feature), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+            <td><%= link_to 'Edit',  edit_user_plan_feature_path(@user.id, @plan, feature), class: "btn btn-dark" %></td>
+            <td><%= link_to 'Destroy',user_plan_feature_path(@user, @plan, feature), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+
         </tr>
     <% end %>
   </tbody>
