--- a/app/views/plans/index.html.erb
+++ b/app/views/plans/index.html.erb
@@ -1,22 +1,31 @@
+<h1> PLANS</h1>
+<% if @user.userType == 'admin'%>
+  <%= link_to 'ADD PLAN', new_user_plan_path(@user.id)  , class: "btn btn-dark"  %>
+<%end%>
+<br/>
+<br/>
 <table class="table table-striped">
   <thead>
     <tr>
-      <th>name</th>
-      <th>monthly_fee</th>
+      <th>  NAME</th>
+      <th>MONTHLY FEE</th>
 
       <th colspan="3"></th>
     </tr>
   </thead>
-
   <tbody>
     <% @plan.each do |plan| %>
         <tr>
           <td><%= plan.name %></td>
           <td><%= plan.monthly_fee %></td>
-          <td><%= link_to 'FEATURES', plan_features_path(plan.id) ,class: "btn btn-dark"%></td>
-          <td><%= link_to 'ADD FEATURE', new_plan_feature_path(plan.id) ,class: "btn btn-dark"%></td>
-          <td><%= link_to 'Edit', edit_plan_path(plan),class: "btn btn-dark" %></td>
-          <td><%= link_to 'Destroy', plan,class: "btn btn-dark", method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <% if @user.userType == 'admin'%>
+          <td><%= link_to 'ADD FEATURE', new_user_plan_feature_path(@user.id ,plan.id) ,class: "btn btn-dark"%></td>
+          <td><%= link_to 'Edit', edit_user_plan_path(@user.id, plan),class: "btn btn-dark" %></td>
+          <td><%= link_to 'Destroy', user_plan_path(@user.id, plan.id),class: "btn btn-dark", method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <%else%>
+            <td><%= link_to 'BUY PLAN', user_plan_subscriptions_path(@user.id,plan.id), class: "btn btn-dark",method: :post%></td>
+          <%end%>
+          <td><%= link_to 'FEATURES', user_plan_features_path(@user.id,plan.id), class: "btn btn-dark"%></td>
         </tr>
     <% end %>
   </tbody>
