--- a/app/views/users/_header.html.erb
+++ b/app/views/users/_header.html.erb
@@ -1,3 +1,4 @@
+<%@user = current_user%>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
   <%= link_to 'Billing And Payment' , root_path, class: "navbar-brand"%>
@@ -7,19 +8,22 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-        <%= link_to 'About Us' , user_about_path,class: "navbar-brand"%>
         <% if user_signed_in?%>
-         <%= link_to 'Plans' ,user_add_plan_path,  class: "navbar-brand"%>
-          <%= link_to 'Add Buyer ' ,  user_add_buyer_path, class: "navbar-brand"%>
+
+          <% if @user.userType == 'admin'%>
+            <%= link_to 'Add Buyer ' ,  new_user_path, class: "navbar-brand"%>
+            <%= link_to 'Edit Profile ' , edit_user_registration_path, class: "navbar-brand"%>
+          <%end%>
+
+          <%= link_to 'Plans' ,user_plans_path(@user.id),  class: "navbar-brand"%>
           <%= link_to 'Sign Out ' ,  destroy_user_session_path, method: :delete, class: "navbar-brand"%>
-          <%= link_to 'Edit Profile ' , edit_user_registration_path, class: "navbar-brand"%>
+
         <% else %>
           <%= link_to 'Sign Up ' , new_user_registration_path, class: "navbar-brand"%>
           <%= link_to 'Sign In ' , user_session_path, class: "navbar-brand"%>
         <%end%>
         </li>
       </ul>
-
     </div>
   </div>
 </nav>
