--- a/app/views/users/_buyer_form.html.erb
+++ b/app/views/users/_buyer_form.html.erb
@@ -2,12 +2,12 @@
 <%= form_for @user, remote: true do |form| %>
 <div class="field mb-3">
   <%= form.label :email %>
-  <%= form.text_field :email, class:"form-control"%>
+  <%= form.text_field :email, class:"form-control", required: true%>
 </div>
 
 <div class="field mb-3">
   <%= form.label :password %>
-  <%= form.text_field :password, class:"form-control"%>
+  <%= form.text_field :password, class:"form-control", required: true%>
 </div>
 
 <div class="field mb-3">
