--- a/app/views/plans/index.html.erb
+++ b/app/views/plans/index.html.erb
@@ -17,23 +17,46 @@
     <% @plan.each do |plan| %>
         <tr>
           <td><%= plan.name %></td>
-          <td><%= plan.monthly_fee %></td>
+          <td><%= number_to_currency(plan.monthly_fee) %></td>
 
           <% if @user.userType == 'admin'%>
           <td><%= link_to 'ADD FEATURE', new_user_plan_feature_path(@user.id ,plan.id) ,class: 'btn btn-dark'%></td>
           <td><%= link_to 'Edit', edit_user_plan_path(@user.id, plan),class: 'btn btn-dark' %></td>
           <td><%= link_to 'Destroy', user_plan_path(@user.id, plan.id),class: 'btn btn-dark', method: :delete, data: { confirm: 'Are you sure?' } %></td>
           <%else%>
-            <td><%= link_to 'SUBSCRIBE', user_plan_subscriptions_path(@user.id,plan.id), id: "subscribe-#{plan.id}", remote: true , class: 'btn btn-dark',method: :post%></td>
+            <td>
+              <%= check_box_tag "selected_plans[]", plan.id, false, class: 'subscribed_plan_checkbox' %>
+              <td>CHECK TO SUBSCRIBE</td>
+            </td>
           <%end%>
 
-          <td><%= link_to 'FEATURES', user_plan_features_path(@user.id,plan.id), class: 'btn btn-dark'%></td>
+          <td><%= link_to 'FEATURES', user_plan_features_path(@user.id,plan.id), class: 'btn btn-dark' %></td>
         </tr>
     <% end %>
   </tbody>
 </table>
 
   <% if @user.userType != 'admin'%>
-    <%= link_to 'Checkout' ,user_checkouts_path(@user.id), method: :post, remote: true,  class: 'btn btn-dark'%>
+    <%= link_to 'Checkout' ,'#_', class: 'btn btn-dark', id: 'checkout_plans' %>
   <%end%>
 <br>
+
+<%= javascript_tag do %>
+  $("#checkout_plans").click(function() {
+
+    var selected_plans = [];
+    $('.subscribed_plan_checkbox:checked').each(function() {
+      selected_plans.push($(this).attr('value'));
+    });
+    alert('Wait for few seconds');
+
+    url_data = {'selected_plans' : selected_plans }
+    $.ajax({
+      type: 'POST',
+      beforeSend: function(xhr) {xhr.setRequestHeader('X-CSRF-Token', $('meta[name="csrf-token"]').attr('content'))},
+      url: 'checkouts/create',
+      data: url_data
+    });
+  });
+
+<% end %>
