--- a/app/views/users/_buyer_form.html.erb
+++ b/app/views/users/_buyer_form.html.erb
@@ -1,5 +1,11 @@
 <br/>
 <%= form_for @user, remote: true do |form| %>
+
+<div class="field mb-3">
+  <%= form.label :name %>
+  <%= form.text_field :name, class:"form-control", required: true%>
+</div>
+
 <div class="field mb-3">
   <%= form.label :email %>
   <%= form.text_field :email, class:"form-control", required: true%>
