--- a/app/views/users/_header.html.erb
+++ b/app/views/users/_header.html.erb
@@ -13,6 +13,7 @@
           <% if @user.userType == 'admin'%>
 
             <%= link_to 'BUYERS ' ,  users_path, class: "navbar-brand"%>
+            <%= link_to 'INVITE BUYER ' ,  new_user_invitation_path, class: "navbar-brand"%>
             <%= link_to 'Add Buyer ' ,  new_user_path, class: "navbar-brand"%>
             <%= link_to 'Edit Profile ' , edit_user_registration_path, class: "navbar-brand"%>
           <%end%>
