--- a/app/views/users/invitations/new.html.erb
+++ b/app/views/users/invitations/new.html.erb
@@ -1,21 +1,13 @@
 <h2><%= t "devise.invitations.new.header" %></h2>
 
 <%= form_for(resource, as: resource_name, url: invitation_path(resource_name), html: { method: :post }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+  <%= render "users/shared/error_messages", resource: resource %>
 
   <% resource.class.invite_key_fields.each do |field| -%>
-    <div class='field mb-3'>
-      <%= f.label :name %><br />
-      <%= f.text_field :name , class:"form-control" %>
-    </div>
-
     <div class="field">
+  <h1>  hello</h1>
       <%= f.label field %><br />
-      <%= f.text_field field , class:"form-control"%>
-    </div>
-
-    <div class="field mb-3">
-      <%= f.text_field :userType, class:"form-control", type: :hidden, value: 'buyer'%>
+      <%= f.text_field field %>
     </div>
   <% end -%>
 
