solved rubocop issues

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,7 @@
 
 <% if @current_user.userType == 'admin'%>
+<td><%= link_to 'CHARGE ACCOUNTS', charge_account_users_path ,class: 'btn btn-dark'%></td>
+
 <h1> BUYERS</h1>
 <br/>
 <br/>
