--- a/app/views/users/invitations/new.html.erb
+++ b/app/views/users/invitations/new.html.erb
@@ -5,11 +5,18 @@
 
   <% resource.class.invite_key_fields.each do |field| -%>
     <div class="field">
-  <h1>  hello</h1>
       <%= f.label field %><br />
       <%= f.text_field field %>
     </div>
   <% end -%>
+
+    <div class='field mb-3'>
+      <%= f.label :name %><br />
+      <%= f.text_field :name , class:"form-control" %>
+    </div>
+    <div class="field mb-3">
+      <%= f.text_field :userType, class:"form-control", type: :hidden, value: 'buyer'%>
+    </div>
 
   <div class="actions">
     <%= f.submit t("devise.invitations.new.submit_button") %>
