--- a/app/views/features/_feature_form.html.erb
+++ b/app/views/features/_feature_form.html.erb
@@ -12,12 +12,12 @@
 
   <div class='field mb-3'>
     <%= form.label :unit_price %>
-    <%= form.number_field :unit_price , class:'form-control', required: true%>
+    <%= form.number_field :unit_price , class:'form-control', min: 101, required: true%>
   </div>
 
   <div class='field mb-3'>
     <%= form.label :max_unit_limit %>
-    <%= form.number_field :max_unit_limit , class:'form-control', required: true%>
+    <%= form.number_field :max_unit_limit , class:'form-control',min: 1,  required: true%>
   </div>
 
 <br/>
