--- a/app/views/plans/_plan_form.html.erb
+++ b/app/views/plans/_plan_form.html.erb
@@ -2,7 +2,7 @@
 <%= form_with(model: [@user, @plan], :remote => true) do |form| %>
 <div class='field mb-3'>
   <%= form.label :name %>
-  <%= form.text_field :name, class:'form-control'%>
+  <%= form.text_field :name, class:'form-control', required: true%>
 </div>
 
 <div class='field mb-3'>
