--- a/app/views/users/_header.html.erb
+++ b/app/views/users/_header.html.erb
@@ -11,8 +11,8 @@
         <% if user_signed_in?%>
 
           <% if @user.userType == 'admin'%>
-            <%= link_to 'BUYERS ' ,  users_path, class: "navbar-brand"%>
-            <%= link_to 'INVITE BUYER ' ,  new_user_invitation_path, class: "navbar-brand"%>
+            <%= link_to 'Buyers ' ,  users_path, class: "navbar-brand"%>
+            <%= link_to 'Invite Buyer ' ,  new_user_invitation_path, class: "navbar-brand"%>
            <%end%>
           <%= link_to 'Plans' ,user_plans_path(@user.id),  class: "navbar-brand"%>
           <%= link_to 'Sign Out ' ,  destroy_user_session_path, method: :delete, class: "navbar-brand"%>
