--- a/app/views/users/_header.html.erb
+++ b/app/views/users/_header.html.erb
@@ -15,10 +15,11 @@
           <% if @user.userType == 'admin'%>
             <%= link_to 'Buyers ' ,  users_path, class: "navbar-brand"%>
             <%= link_to 'Invite Buyer ' ,  new_user_invitation_path, class: "navbar-brand"%>
+          <%else%>
+            <%= link_to 'Subcriptions' ,user_plan_subscriptions_path(@user.id,@plan),  class: "navbar-brand"%>
           <%end%>
           <%= link_to 'Plans' ,user_plans_path(@user.id),  class: "navbar-brand"%>
 
-          <%= link_to 'Subcriptions' ,user_plan_subscriptions_path(@user.id,@plan),  class: "navbar-brand"%>
           <%= link_to 'Sign Out ' ,  destroy_user_session_path, method: :delete, class: "navbar-brand"%>
 
         <% else %>
