--- a/app/views/plans/edit.html.erb
+++ b/app/views/plans/edit.html.erb
@@ -1,3 +1,2 @@
-<h1>EDITING <%=@plan.name%> </h1>
-
-<%= render 'plan_form', feature: @features %>
+ <h1>EDITING PLAN</h1>
+<%= render 'plan_form', plan: @plan %>
