--- a/app/views/plan_usages/edit.html.erb
+++ b/app/views/plan_usages/edit.html.erb
@@ -1,5 +1,5 @@
 <br/>
-<%= form_with(model: [@user, @plan_usage], :remote => true) do |form| %>
+<%= form_with(model: [@user, @usage], :remote => true) do |form| %>
 
 <div class='field mb-3'>
   <%= form.number_field :plan_name, class:'form-control', type: :hidden%>
