--- a/app/views/plans/_plan_form.html.erb
+++ b/app/views/plans/_plan_form.html.erb
@@ -6,7 +6,8 @@
 </div>
 
 <div class='field mb-3'>
-  <%= form.number_field :monthly_fee, class:'form-control' ,value: 0, type: :hidden%>
+  <%= form.label :name %>
+  <%= form.number_field :monthly_fee, class:'form-control'%>
 </div>
 
 <br/>
