--- a/app/views/subscriptions/index.html.erb
+++ b/app/views/subscriptions/index.html.erb
@@ -6,19 +6,20 @@
     <tr>
       <th>PLANS</th>
       <th>FEATURES</th>
-      <th>AMOUNT</th>
-      <th>MAX LIMIT</th>
+      <th>USED UNITS</th>
     </tr>
   </thead>
   <tbody>
   <%if @user.userType == 'buyer'%>
     <% @user.subscriptions.each do |subscription| %>
-      <% if subscription.status == 1 %>
-        <%@plan_usages.each do |plan_usage|%>
-           <tr><td><%= plan_usage.plan_name %></td>
-          <td><%= plan_usage.features_name %></td>
-          <td><%= number_to_currency(plan_usage.amount.to_i / 100) %></td>
-          <td><%= plan_usage.increased_units %></td>
+      <% usages = subscription.usages%>
+      <% if subscription.subscribed? %>
+        <% usages.each do |usage|%>
+        <%feature = Feature.find_by(id:usage.feature_id)%>
+        <%plan = Plan.find_by(id:usage.plan_id)%>
+          <tr><td><%=plan.name %></td>
+          <td><%= feature.name %></td>
+          <td><%= usage.used_units%></td>
           </tr>
         <%end%>
       <%end%>
