--- a/app/views/users/_header.html.erb
+++ b/app/views/users/_header.html.erb
@@ -1,5 +1,5 @@
-<%@user = current_user%>
-<%@plan = Plan.all%>
+<%user = current_user%>
+<%plan = Plan.all%>
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
@@ -12,13 +12,13 @@
         <li class="nav-item">
         <% if user_signed_in?%>
 
-          <% if @user.userType == 'admin'%>
+          <% if user.userType == 'admin'%>
             <%= link_to 'Buyers ' ,  users_path, class: "navbar-brand"%>
-            <%= link_to 'Invite Buyer ' ,  new_user_invitation_path, class: "navbar-brand"%>
+            <%= link_to 'Payments ' ,  user_plan_checkouts_path(user.id,plan), class: "navbar-brand"%>
           <%else%>
-            <%= link_to 'Subcriptions' ,user_plan_subscriptions_path(@user.id,@plan),  class: "navbar-brand"%>
+            <%= link_to 'Subcriptions' ,user_plan_subscriptions_path(user.id,plan),  class: "navbar-brand"%>
           <%end%>
-          <%= link_to 'Plans' ,user_plans_path(@user.id),  class: "navbar-brand"%>
+          <%= link_to 'Plans' ,user_plans_path(user.id),  class: "navbar-brand"%>
 
           <%= link_to 'Sign Out ' ,  destroy_user_session_path, method: :delete, class: "navbar-brand"%>
 
