--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,32 +1,30 @@
 
 <% if @current_user.userType == 'admin'%>
-<h1> BUYERS</h1>
-
-
-<td><%= link_to 'CHARGE ACCOUNTS', charge_account_users_path ,class: 'btn btn-dark'%></td>
-<br/>
-<br/>
-
-<table class='table table-striped'>
-  <thead>
-    <tr>
-      <th>BUYERS</th>
-    </tr>
-  </thead>
-  <tbody>
-  <%= link_to 'Invite Buyer ' ,  new_user_invitation_path, class: 'btn btn-dark'%>
+  <h1> BUYERS</h1>
+  <td><%= link_to 'CHARGE ACCOUNTS', charge_account_users_path ,class: 'btn btn-dark'%></td>
+  <br/>
+  <br/>
+<%plan = Plan.all%>
+  <table class='table table-striped'>
+    <thead>
+      <tr>
+        <th>BUYERS</th>
+      </tr>
+    </thead>
+    <tbody>
+    <%= link_to 'Invite Buyer ' ,  new_user_invitation_path, class: 'btn btn-dark'%>
     <% @user.each do |user| %>
-        <tr>
-       <% if user.userType != 'admin'%>
+      <tr>
+      <% if user.userType != 'admin'%>
           <td><%= user.email %></td>
-          <td><%= link_to 'SUBSCRIBED PLANS', user_plan_usages_path(user.id) ,class: 'btn btn-dark'%></td>
-          <td><%= link_to 'DELETE USER', user_path(user.id),class: 'btn btn-dark', method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <td><%= link_to 'Subscribed Plans', user_plan_subscriptions_path(user.id,plan) ,class: 'btn btn-dark'%></td>
+          <td><%= link_to 'Delete User', user_path(user.id),class: 'btn btn-dark', method: :delete, data: { confirm: 'Are you sure?' } %></td>
       <%end%>
-   <% end %>
-  </tbody>
-</table>
-  <%else%>
-  <%end%>
-<br>
+      </tr>
+    <% end %>
+    </tbody>
+  </table>
+<%end%>
+
 
 
