resolved rubocop issues

--- a/app/views/features/index.html.erb
+++ b/app/views/features/index.html.erb
@@ -5,6 +5,7 @@
       <th>CODE PRICE PER UNIT</th>
       <th>PRICE PER UNIT</th>
       <th>MAX LIMIT</th>
+      <th colspan = '2'>
       </tr>
   </thead>
 
