--- a/app/views/features/_feature_form.html.erb
+++ b/app/views/features/_feature_form.html.erb
@@ -7,7 +7,7 @@
 
   <div class='field mb-3'>
     <%= form.label :code %>
-    <%= form.number_field :code, value: number_to_currency(form.object.code.to_f, delimiter: '', unit: ''), class:'form-control', step: :any %>
+    <%= form.text_field :code, value: number_to_currency(form.object.code.to_f, delimiter: '', unit: ''), class:'form-control', step: :any %>
   </div>
 
   <div class='field mb-3'>
