--- a/app/views/plans/_plan_form.html.erb
+++ b/app/views/plans/_plan_form.html.erb
@@ -6,7 +6,7 @@
 </div>
 
 <div class='field mb-3'>
-  <%= form.label :Amount %>
+  <%= form.label :Amount, min: 101, required: true %>
   <%= form.number_field :monthly_fee, class:'form-control'%>
 </div>
 
