added checks on routes

--- a/app/views/devise/invitations/new.html.erb
+++ b/app/views/devise/invitations/new.html.erb
@@ -11,7 +11,7 @@
      <% end -%>
 
     <div class="field mb-3">
-      <%= f.text_field :userType, class:"form-control", type: :hidden, value: 'buyer'%>
+      <%= f.text_field :user_type, class:"form-control", type: :hidden, value: 'buyer'%>
     </div>
 
 
