--- a/app/views/users/search.html.erb
+++ b/app/views/users/search.html.erb
@@ -12,7 +12,7 @@
       <% @users.each do |user| %>
         <tr>
         <td><%= user.email %></td>
-        <% if user.userType != 'admin'%>
+        <% if user.user_type != 'admin'%>
             <td><%= link_to 'Subscribed Plans', user_plan_subscriptions_path(user.id,plan) ,class: 'btn btn-dark'%></td>
             <td><%= link_to 'Delete User', user_path(user.id),class: 'btn btn-dark', method: :delete, data: { confirm: 'Are you sure?' } %></td>
         <%end%>
