--- a/app/views/subscriptions/index.html.erb
+++ b/app/views/subscriptions/index.html.erb
@@ -13,7 +13,7 @@
     </tr>
   </thead>
   <tbody>
-  <%if @user.userType == 'buyer'%>
+  <%if @user.user_type == 'buyer'%>
     <% @user.subscriptions.each do |subscription| %>
       <% usages = subscription.usages%>
         <% usages.each do |usage|%>
@@ -27,7 +27,7 @@
             <% if @user.billing_date + 1.month == Time.zone.today%>
               <td><%= link_to 'PAY',user_plan_subscriptions_path(@user.id, plan.id) ,class: 'btn btn-dark', method: :post, remote: true %></td>
             <%end%>
-            <%if user.userType =='admin'%>
+            <%if user.user_type =='admin'%>
               <td><%= link_to 'CHANGE LIMIT +',edit_user_usage_path(user.id, usage.id),class: 'btn btn-dark'%></td>
             <%end%>
           </tr>
