--- a/app/views/users/_buyer_form.html.erb
+++ b/app/views/users/_buyer_form.html.erb
@@ -17,7 +17,7 @@
 </div>
 
 <div class="field mb-3">
-  <%= form.text_field :userType, class:"form-control", type: :hidden, value: 'buyer'%>
+  <%= form.text_field :user_type, class:"form-control", type: :hidden, value: 'buyer'%>
 </div>
 
 <br/>
