--- a/app/views/subscriptions/index.html.erb
+++ b/app/views/subscriptions/index.html.erb
@@ -5,36 +5,40 @@
 
 <br/>
 <table class='table table-striped'>
+
   <thead>
     <tr>
-      <th>PLANS</th>
-      <th>FEATURES</th>
-      <th>CODE</th>
-      <th>USED UNITS</th>
-      <th colspan = '1'>
+      <th> PLANS </th>
+      <th> FEATURES </th>
+      <th> CODE </th>
+      <th> USED UNITS </th>
+      <th  colspan = '1'>
     </tr>
   </thead>
   <tbody>
-  <%if @user.user_type == 'buyer'%>
+
+  <% if @user.buyer? %>
     <% @user.subscriptions.each do |subscription| %>
-      <% usages = subscription.usages%>
-        <% usages.each do |usage|%>
-        <%feature = Feature.find_by(id:usage.feature_id)%>
-        <%plan = Plan.find_by(id:usage.plan_id)%>
+      <% usages = subscription.usages %>
+        <% usages.each do |usage| %>        
+          <% feature = usage.find_feature %>
+
           <tr>
-            <td><%=plan.name %></td>
+            <td><%= usage.subscription.plan.name %></td>
             <td><%= feature.name %></td>
             <td><%= feature.code %></td>
-            <td><%= usage.used_units%></td>
+            <td><%= usage.used_units %></td>
+
             <% if @user.billing_date + 1.month == Time.zone.today%>
               <td><%= link_to 'PAY',user_plan_subscriptions_path(@user.id, plan.id) ,class: 'btn btn-dark', method: :post, remote: true %></td>
             <%end%>
-            <%if user.user_type =='admin'%>
-              <td><%= link_to 'CHANGE LIMIT +',edit_user_usage_path(user.id, usage.id),class: 'btn btn-dark'%></td>
+
+            <%if user.admin?%>
+              <td><%= link_to 'CHANGE LIMIT +',edit_user_usage_path(user.id, usage.id),class: 'btn btn-dark' %></td>
             <%end%>
+
           </tr>
         <%end%>
-
     <%end%>
   <%end%>
 
