--- a/app/views/features/index.html.erb
+++ b/app/views/features/index.html.erb
@@ -2,7 +2,7 @@
   <thead>
     <tr>
      <th>NAME</th>
-      <th>CODE PRICE PER UNIT</th>
+      <th>CODE </th>
       <th>PRICE PER UNIT</th>
       <th>MAX LIMIT</th>
 
@@ -18,7 +18,7 @@
           <td><%= feature.code %></td>
           <td><%= number_to_currency(feature.unit_price /  100)%></td>
           <td><%= feature.max_unit_limit %></td>
-          <%if @user.user_type == 'admin'%>
+          <%if @user.admin?%>
             <td><%= link_to 'Edit',  edit_user_plan_feature_path(@user.id, @plan, feature), class: 'btn btn-dark' %></td>
             <td><%= link_to 'Delete',user_plan_feature_path(@user, @plan, feature), class: 'btn btn-dark', method: :delete, data: { confirm: 'Are you sure?' } %></td>
           <%end%>
