--- a/app/views/users/_buyer_form.html.erb
+++ b/app/views/users/_buyer_form.html.erb
@@ -1,5 +1,5 @@
 <br/>
-<%= form_for @user, remote: true do |form| %>
+<%= form_for user, remote: true do |form| %>
 
 <div class="field mb-3">
   <%= form.label :name %>
