--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,33 +1,28 @@
 
-<% if @current_user.user_type == 'admin'%>
-  <h1> BUYERS</h1>
+<% if current_user.admin? %>
+  <h1> BUYERS </h1>
+
   <form class="d-flex" action="/search" >
     <input class="form-control me-2" name ='q' type="text" placeholder="Search" aria-label="Search">
     <button class="btn btn-outline-success" type="submit">Search</button>
   </form>
-      <br/>
+
+  <br/>
   <%= link_to 'CHARGE ACCOUNTS', charge_account_users_path ,class: 'btn btn-dark'%>
   <br/>
   <br/>
-<%plan = Plan.all%>
-  <table class='table table-striped'>
+  <table class='table table-striped' >
     <thead>
       <tr>
-        <th>BUYERS</th>
+        <th> BUYERS </th>
         <th colspan = '2'>
       </tr>
     </thead>
     <tbody>
     <br/>
     <%= link_to 'Invite Buyer ' ,  new_user_invitation_path, class: 'btn btn-success btn-lg .right-*' %>
-    <% @user.each do |user| %>
-      <tr>
-      <td><%= user.email %></td>
-      <% if user.user_type != 'admin'%>
-          <td><%= link_to 'Subscribed Plans', user_plan_subscriptions_path(user.id,plan) ,class: 'btn btn-dark'%></td>
-          <td><%= link_to 'Delete User', user_path(user.id),class: 'btn btn-dark', method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      <%end%>
-      </tr>
+    <% @users.each do |user| %>
+      <%= render 'user_details',user: user, plan: @plans %>
     <% end %>
     </tbody>
   </table>
