--- a/app/views/users/_header.html.erb
+++ b/app/views/users/_header.html.erb
@@ -1,5 +1,5 @@
 
-<%plan = Plan.all%>
+<% plans = Plan.all %>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
   <%= link_to 'Billing And Payment' , root_path, class: "navbar-brand"%>
@@ -13,10 +13,11 @@
 
           <% if current_user.admin?%>
             <%= link_to 'Buyers ' ,  users_path, class: "navbar-brand"%>
-            <%= link_to 'Payments ' ,  user_plan_checkouts_path(current_user.id,plan), class: "navbar-brand"%>
+            <%= link_to 'Payments ' ,  user_plan_checkouts_path(current_user.id,plans), class: "navbar-brand"%>
           <%else%>
-            <%= link_to 'Subcriptions' ,user_plan_subscriptions_path(current_user.id,plan),  class: "navbar-brand"%>
+            <%= link_to 'Subcriptions' ,user_plan_subscriptions_path(current_user.id,plans),  class: "navbar-brand"%>
           <%end%>
+          
           <%= link_to 'Plans' ,user_plans_path(current_user.id),  class: "navbar-brand"%>
           <%= link_to 'Sign Out ' ,  destroy_user_session_path, method: :delete, class: "navbar-brand"%>
         <% else %>
